# frameworkless

./: Makefile  app.py  env.dev.json  env.json  env.test.json  pyproject.toml  route_args  rsgi.py  test.db  test.py  teste  todo
src/: __init__.py  _types.py  config.py  jwt.py  middlewares.py  models.py  repository.py  routes.py  security.py  utils.py
src/controllers/: __init__.py  auth.py  consulta.py  doenca.py  exame.py  medicamento.py  paciente.py  tarefa.py  teste.py  todo.py  user.py
src/domain/: models.py
src/domain/models/: __init__.py  _base.py  consulta.py  doenca.py  exame.py  medicamento.py  paciente.py  tarefa.py
src/domain/services/: __init__.py  auth.py  consulta.py
src/exceptions/: http.py
src/infra/: database.py
src/infra/database/: mongo.py  sql.py
src/infra/entities/: __init__.py  consultas.py  doencas.py  exames.py  medicamentos.py  pacientes.py  tarefa.py  todo.py  users.py
src/repository/: __init__.py  mongo.py  sql.py
src/routers/: __init__.py  _base.py  auth.py  consulta.py  doenca.py  exame.py  medicamento.py  paciente.py  tarefa.py  teste.py
tests/: mock.py  test_app.py  test_controllers.py  utils.py
