[project]
name = "frameworkless"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "granian[reload]>=1.7.3",
    "motor>=3.6.0",
    "pymongo>=4.9.2",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]
